# nixpkgs-review-gha

./: README.md  drv-build-support.nix  flake.nix  generate_markdown_report.py  shortcut.user.js  treefmt.nix
.github/actions/setup-nix/: action.yml
.github/actions/setup-nu/: action.yml
.github/workflows/: build.yml  check.yml  flake-update.yml  review.yml
api/: .gitignore  Cargo.toml  module.nix  package.nix
api/src/: api.rs  lib.rs  main.rs  nixpkgs_review.rs  serde_ext.rs
api/src/cli/: check_id_token.rs  mod.rs  serve.rs
api/src/github/: mod.rs  oidc.rs
api/src/snapshots/: nrgha_api__nixpkgs_review__tests__render.snap  nrgha_api__nixpkgs_review__tests__render_no_cache.snap  nrgha_api__nixpkgs_review__tests__render_no_extra_args.snap  nrgha_api__nixpkgs_review__tests__render_success.snap
api/templates/: report.md
patches/: 0001-Add-package-aliases-to-JSON-report.patch
review/: gha.nu  prepare.nu  report.nu  review.nu  system-report.nu
