[package]
name = "nrgha-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
axum = { version = "0.8.9", default-features = false, features = ["http1", "http2", "tokio", "json"] }
axum-extra = { version = "0.12.6", default-features = false, features = ["typed-header"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
listenfd = { version = "1.0.2", default-features = false }
openidconnect = { version = "4.0.1", default-features = false, features = [] }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "json", "rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false }
tera = { version = "1.20.1", default-features = false, features = ["builtins"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt"] }

[dev-dependencies]
insta = { version = "1.47.2" }
